--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "14.2.3",
+    "postcss": "^8.4.47",
     "react": "^18",
     "react-dom": "^18",
+    "tailwindcss": "^3.4.13",
     "thirdweb": "^5.12.0"
   },
   "devDependencies": {
