--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.14.4",
     "next": "14.2.3",
     "postcss": "^8.4.47",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.13",
     "thirdweb": "^5.12.0"
   },
